--- a/layout.html
+++ b/layout.html
@@ -86,7 +86,7 @@
                     </div>
                     <div class="columnn">
                       <div class="content">
-                        <img src="projects/port2.png" alt="eatez" style="border-radius: 10px; width:84%">
+                        <img src="projects/port2.png" onclick="openModal2();currentSlide2(1)" class="hover-shadow cursor2" alt="eatez" style="border-radius: 10px; width:84%">
                         <h3>EATEZ APP</h3>
                         <!-- <h4>2nd semester project</h4>
                         <a href="https://github.com/feliciagraciella/Project-Application-Development-Catering" style="color: #3B3D3F"><h5 style="margin-bottom: 40px;">--link--</h5></a> -->
@@ -94,7 +94,7 @@
                     </div>
                     <div class="columnn">
                       <div class="content">
-                        <img src="projects/port3.png" alt="wix" style="border-radius: 10px; width:100%">
+                        <img src="projects/port3.png" onclick="openModal3();currentSlide3(1)" class="hover-shadow cursor3" alt="wix" style="border-radius: 10px; width:100%">
                         <h3>KXINDMARKET WEBSITE</h3>
                         <!-- <h4>2nd semester project</h4>
                         <a href="https://enugroho.wixsite.com/kxindmarket" style="color: #3B3D3F"><h5 style="margin-bottom: 40px;">--link--</h5></a> -->
@@ -102,7 +102,7 @@
                     </div>
                     <div class="columnn">
                       <div class="content">
-                        <img src="projects/port4.png" alt="database" style="border-radius: 10px; width:100%">
+                        <img src="projects/port4.png" onclick="openModal4();currentSlide4(1)" class="hover-shadow cursor4" alt="database" style="border-radius: 10px; width:100%">
                         <h3>EATEZ DATABASE</h3>
                         <!-- <h4>KMMI project</h4>
                         <a href="https://github.com/feliciagraciella/Project-Database-Catering" style="color: #3B3D3F"><h5 style="margin-bottom: 40px;">--link--</h5></a> -->
@@ -110,7 +110,7 @@
                     </div>
                     <div class="columnn">
                       <div class="content">
-                        <img src="projects/port5.png" alt="webdev1" style="border-radius: 10px; width:100%">
+                        <img src="projects/port5.png" onclick="openModal5();currentSlide5(1)" class="hover-shadow cursor5" alt="webdev1" style="border-radius: 10px; width:100%">
                         <h3>PERSONAL WEBSITE</h3>
                         <!-- <h4>Web Development project</h4>
                         <a href="https://github.com/feliciagraciella/Project-WebDevelopment-PersonalWebsite" style="color: #3B3D3F"><h5 style="margin-bottom: 40px;">--link--</h5></a> -->
@@ -118,7 +118,7 @@
                     </div>
                     <div class="columnn">
                       <div class="content">
-                        <img src="projects/port6.png" alt="webdev2" style="border-radius: 10px; width:100%">
+                        <img src="projects/port6.png" onclick="openModal6();currentSlide6(1)" class="hover-shadow cursor6" alt="webdev2" style="border-radius: 10px; width:100%">
                         <h3>MAKAN YUK WEBSITE</h3>
                         <!-- <h4>Web Development project</h4>
                         <a href="https://github.com/feliciagraciella/Project-WebDevelopment-MakanYuk" style="color: #3B3D3F"><h5 style="margin-bottom: 40px;">--link--</h5></a> -->
@@ -126,14 +126,14 @@
                     </div>
                     <div class="columnn">
                       <div class="content">
-                        <a><img src="projects/port7.png" alt="webdev2" style="border-radius: 10px; width:87%"></a>
+                        <a><img src="projects/port7.png" onclick="openModal7();currentSlide7(1)" class="hover-shadow cursor7" alt="sad" style="border-radius: 10px; width:87%"></a>
                         <h3>BEST AUTO CARE SOLUTION WEBSITE</h3>
                         <!-- <h4>Education Technology Innovation Competition</h4> -->
                       </div>
                     </div>
                     <div class="columnn">
                       <div class="content">
-                        <a><img src="projects/port8.png" alt="webdev2" style="border-radius: 10px; width:89%"></a>
+                        <a><img src="projects/port8.png" onclick="openModal8();currentSlide8(1)" class="hover-shadow cursor8" alt="ailec" style="border-radius: 10px; width:89%"></a>
                         <h3>LANGKAHKU WEBSITE</h3>
                         <!-- <h4>System Analysis and Design project</h4> -->
                       </div>
