--- a/layout.html
+++ b/layout.html
@@ -238,6 +238,15 @@
           </div>
         </section>
 
+
+
+
+
+        <section class="contacts">
+
+        </section>
+
+
         <script src="portfolio.js"></script>
         <script src="script.js"></script>
     </body>
